--- a/style.css
+++ b/style.css
@@ -8,12 +8,11 @@
 }
 
 body {
-  background-color: black; 
+  background-color: black;
 }
 
 .navbar {
   margin-top: 10px; 
-  background: black;
   height: 80px;
   display: flex;
   justify-content: center;
@@ -53,7 +52,6 @@ body {
 }
 
 .nav_links {
-  color: white;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -71,7 +69,7 @@ body {
   padding: 0 15px;
 }
 
-.button {
+  .main_btn{
   display: flex;
   justify-content: center;
   text-decoration: none;
@@ -79,7 +77,7 @@ body {
   padding: 10px 10px;
   margin-right: 20px;
   height: 100%;
-  width: 150px;
+  width: 800px;
   border: none;
   background: purple;
   background: linear-gradient(to right, orange ,red, purple);
@@ -87,6 +85,45 @@ body {
   outline: none;
   border-radius: 4px;
   transition: all 0.3s ease;
+  margin-bottom: 5px;
+}
+
+ .main_btn_2{
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  align-items: center;
+  padding: 10px 10px;
+  margin-right: 20px;
+  height: 100%;
+  width: 800px;
+  border: none;
+  background: rgb(238,174,202);
+  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+  color: white;
+  outline: none;
+  border-radius: 4px;
+  transition: all 0.3s ease;
+  margin-bottom: 5px;
+}
+
+ .main_btn_1{
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  align-items: center;
+  padding: 10px 10px;
+  margin-right: 20px;
+  height: 100%;
+  width: 800px;
+  border: none;
+  background: rgb(34,193,195);
+  background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
+  color: white;
+  outline: none;
+  border-radius: 4px;
+  transition: all 0.3s ease;
+  margin-bottom: 5px;
 }
 
 .nav_links:hover {
@@ -95,10 +132,11 @@ body {
 
 .hero {
   margin: auto;
-  height: 600px;
-  background: black;
-  /*background: linear-gradient(to right, grey, lightyellow);*/
-  padding: 200px;
+  height: 400px;
+  padding: 150 300;
+  position: relative;
+  top: 20;
+  border-top: 1px white solid;
 }
 
 .hero_container {
@@ -125,10 +163,8 @@ body {
   border-bottom:  4px solid purple;
 }
 
-.main {s
+.main {
   margin: 100px;
-  background: black;
-  /*background: linear-gradient(to left, grey, yellow);*/
   padding: 10px;
 }
 
@@ -183,6 +219,7 @@ body {
 .main .main_btn {
   margin-top: 5px;
   background: pink;
+  font-size: 20px;
   background: linear-gradient(to right, purple, orange);
 }
 
@@ -207,7 +244,6 @@ body {
 
 .services {
   margin: 100px;
-  background: black;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -215,9 +251,8 @@ body {
 }
 
 .services h1 {
-  color: red;
   margin-bottom: 5px;
-  font-size: 30px;
+  font-size: 25px;
 }
 
 .services_wrapper {
@@ -261,7 +296,6 @@ body {
 }
 
 .footer_container {
-  background-color: black;
   padding: 10px;
   display: flex;
   flex-direction: column;
@@ -330,20 +364,3 @@ body {
   align-items: center;
   width: 250px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
